# xArm_1s-Description-Package

./: .gitignore  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  README.md  verify_setup.sh  xarm_commands.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/xarm_description/share/ament_index/resource_index/package_run_dependencies/: xarm_description
install/xarm_description/share/ament_index/resource_index/parent_prefix_path/: xarm_description
install/xarm_description/share/xarm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/xarm_description/share/xarm_description/cmake/: xarm_descriptionConfig-version.cmake  xarm_descriptionConfig.cmake
install/xarm_description/share/xarm_description/environment/: ament_prefix_path.dsv  path.dsv
install/xarm_description/share/xarm_description/launch/: controller.launch.py  controller.yaml  display.launch.py  gazebo.launch.py  urdf.rviz
install/xarm_description/share/xarm_description/meshes/: Gripper_end_1_1.stl  Gripper_end_2_1.stl  Link_1_1.stl  Link_2_1.stl  Link_3_1.stl  Link_4_1.stl  Link_5_1.stl  base_link.stl  finger_1_1.stl  finger_2_1.stl  gripper_base_1.stl
install/xarm_description/share/xarm_description/urdf/: materials.xacro  xarm.gazebo  xarm.ros2_control.xacro  xarm.xacro
log/: latest_build
src/xarm_description/: CMakeLists.txt  LICENSE  README.md  package.xml
src/xarm_description/launch/: controller.launch.py  controller.yaml  display.launch.py  gazebo.launch.py
src/xarm_description/meshes/: Gripper_end_1_1.stl  Gripper_end_2_1.stl  Link_1_1.stl  Link_2_1.stl  Link_3_1.stl  Link_4_1.stl  Link_5_1.stl  base_link.stl  finger_1_1.stl  finger_2_1.stl  gripper_base_1.stl
src/xarm_description/urdf/: materials.xacro  xarm.gazebo  xarm.ros2_control.xacro  xarm.xacro
src/xarm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/xarm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xarm.ros2_control.xacro  xarm.srdf  xarm.urdf.xacro
src/xarm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/xarm_remote/: CMakeLists.txt  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_ALEXA_SETUP.md  TASK_NUMBER_GUIDE.md  package.xml
src/xarm_remote/action/: ExecuteTask.action  PickPlace.action  XarmTask.action
src/xarm_remote/launch/: full_system.launch.py  full_system_number.launch.py  remote_interface.launch.py  task_server.launch.py  task_server_number.launch.py
src/xarm_remote/scripts/: task_client.py  task_client_number.py  test_integration.py
src/xarm_remote/src/: task_server.cpp  task_server_number.cpp
src/xarm_remote/xarm_remote/: alexa_interface.py
